fix form rendering

--- a/public/netlifyneedsthis.html
+++ b/public/netlifyneedsthis.html
@@ -6,7 +6,7 @@
     <title>Tim Hilton contact form</title>
 
 <body>
-    <form id="contactForm" name="contact" method="POST" data-netlify: "true" data-netlify-honeypot="bot-field" action="/">
+    <form id="contactForm" name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/">
         <input type="hidden" name="form-name" value="contact" />
         <input type="hidden" name="bot-field" />
     
